plang/testing/logs/false-incorrect/120/program120.p.p
xgLET FDyLg.


oM (ZQk) Ej (r7 U Or l (OJM)) :- (sQVBE); jY91A UC oTkm5 z9Yj AFLy.


p (C) (BzwIu).
nu8 SdNjB.

aW aSNh svIr :- (((eAu (w6s (LF) Ftqq (T7Yk)) (JNFnU) (GOpX), v1 oN FoZLK), (c kQRI n (v fX (Rx) lCXxC (URYK)) (CflV), zBsJE))).

zLKc (hUOmA (s9)) (Ysi) :- (cu (fYYrC NO4is) MJ, mE (YtRr) Jd (NVmz); a ti d GO XeHk6; z; (jyx)), (((w7Wd NUG erxq eb))).


f3U9q (lAg) (YgF) :- ((n, bqw (mtCB AR (msE3b (yy)) (i OX7 (j7eQM) (v (d (t1suf (G) kXdTR (P)) mTGC rL C) xnj (D1B)) (zJgza PuD3 (pG w5epF wT (NqNw) (zRQF2 (jsAfn (Du7) Bh0j7) (Ix) (li (O)) Ac)) (k0P5 (tkhQ (QVR) (K) hI2R) (i k q (bsU (AAv) tm8)) n8NU)))) (HC) (dx (LH) (GNNj) (g Ix ftI4)) vLWp8, eS9k gP cbM8D; pPp v8)); cB6.

? g.